--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,17 @@ body {
   color: #222;
   background: #f7f5f0;
 }
-/* Link Styles */
 
+/* Link Styles */
 a {
   text-decoration: none;
   color: #999;
 }
 a:hover {
-  color: #6633ff;
+  color: #459DFC;
 }
 
 /* Section Styles */
-
 .main-nav {
   width: 100%;
   background: black;
@@ -31,6 +30,7 @@ a:hover {
   position: fixed;
   text-align: center;
 }
+
 .nav {
   display: flex;
   justify-content: space-around;
@@ -43,51 +43,61 @@ a:hover {
 .nav .name {
     display: block;
     margin-right: auto;
-    color: white;
+    color: #459DFC;
 }
+
 .nav li {
-  padding: 5px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
 }
+
 .nav a {
-  transition: all .5s;
+    transition: all .2s;
 }
+
 .nav a:hover {
-  color: white
+    color: #459DFC;
 }
 
 header {
   text-align: center;
-  background: url('images/background.jpg') no-repeat top center ;
+  background: url('images/background.jpg') no-repeat top center;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
 }
+
 header {
   line-height: 1.5;
 }
+
+/* Changes to profile image animation and design */
 header .profile-image {
   margin-top: 50px;
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid white;
+  border: 5px groove #458AFC;
   transition: all .5s;
 }
+
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.3) rotate(360deg);
 }
+
 .tag {
   background-color: #efefef;
   color: black;
-  padding: 10px;
+  padding: 10px 25px;
   border-radius: 5px;
   display: table;
   margin: 10px auto;
 } 
+
 .location {
   background-color: #222;
-  color: yellow;
+  color: #458AFC;
 }
+
 .card {
   margin: 30px;
   padding: 20px 40px 40px;
@@ -98,16 +108,17 @@ header .profile-image:hover {
   border-radius: 6px;
   transition: all .5s;
 }
+
 .card:hover {
   border-color: #ff99ff;
 }
 
-
+/* NEW CLASS for logos on index.html */
 .logos {
     width: 100%;
     height: auto;
 }
-
+/* NEW CLASS for logos on index.html */
 
 ul.skills {
   padding: 0;
@@ -117,14 +128,14 @@ ul.skills {
 .skills li {
   border-radius: 6px;
   display: inline-block;
-  background: #ff9904;
+  background: #459DFC;
   color: white;
   padding: 5px 10px;
   margin: 2px;
 }
 
 .skills li:nth-child(odd) {
-  background: #0399ff;
+  background: #000000;
 }
 
 footer {
@@ -158,18 +169,23 @@ a.social {
   opacity: .4;
   transition: all .5s;
 }
+
 a.twitter {
   background-image: url(images/twitter.svg);
 }
+
 a.linkedin {
   background-image: url(images/linkedin.svg);
 }
+
 a.github {
   background-image: url(images/github.svg);
 }
+
 a.social:hover {
   opacity: 1;
 }
+
 .clearfix {
   clear: both;
 }
